[tool.poetry]
name = "livechart"
version = "0.1.0"
description = ""
authors = ["surender.lamba <surender.lamba@rakuten.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
matplotlib = "^3.3.2"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
